--- a/ProjectManager2/MainWindow.xaml
+++ b/ProjectManager2/MainWindow.xaml
@@ -5,8 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectManager2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Background="#2d2d30"
+        Title="Project Manager 2" Height="900" Width="1600">
 </Window>
