--- a/ProjectManager2/ResourceDictionaries/MenuRD.xaml
+++ b/ProjectManager2/ResourceDictionaries/MenuRD.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿re<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ProjectManager2.ResourceDictionaries">
     <Style x:Key="menuParentStyle" TargetType="MenuItem">
