--- a/ProjectManager2/UserControls/MainMenuUC.xaml
+++ b/ProjectManager2/UserControls/MainMenuUC.xaml
@@ -5,23 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProjectManager2.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="900" d:DesignWidth="1600">
-    <WrapPanel>
-        <DockPanel>
-            <TextBlock>asdfas</TextBlock>
-            <Menu DockPanel.Dock="Top" Background="#2d2d30" >
-                <MenuItem Header="_File" Style="{StaticResource MenuItemStyle1}" >
-                    <MenuItem Header="_Open"/>
-                    <MenuItem Header="_Close"/>
-                    <MenuItem Header="_Save"/>
-                </MenuItem>
-                <MenuItem Header="_Edit" Style="{StaticResource MenuItemStyle1}" >
-                    <MenuItem Header="_Open"/>
-                    <MenuItem Header="_Close"/>
-                    <MenuItem Header="_Save"/>
-                </MenuItem>
-            </Menu>
-            <StackPanel></StackPanel>
-        </DockPanel>
-    </WrapPanel>
+             d:DesignHeight="768" d:DesignWidth="1366">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_FiTFle" >
+                <MenuItem Header="_Tile" />
+                <MenuItem Header="_Open"/>
+                <MenuItem Header="_Close"/>
+                <MenuItem Header="_Save"/>
+            </MenuItem>
+            <MenuItem Header="TTilTeasdf" >
+                <MenuItem Header="Tile" />
+                <MenuItem Header="Open"/>
+                <MenuItem Header="Close"/>
+                <MenuItem Header="Save"/>
+            </MenuItem>
+        </Menu>
+        <Grid />
+    </DockPanel>
 </UserControl>
