--- a/ProjectManager2/ResourceDictionaries/TextBlockRD.xaml
+++ b/ProjectManager2/ResourceDictionaries/TextBlockRD.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ProjectManager2.ResourceDictionaries">
-    <Style TargetType="{x:Type TextBlock}">
+    <Style x:Key="tb_Standard" TargetType="{x:Type TextBlock}">
         <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="FontSize" Value="13" />
         <Setter Property="Foreground" Value="#ffffff" />
